--- a/src/components/Footer/FooterStyles.css
+++ b/src/components/Footer/FooterStyles.css
@@ -1,76 +1,85 @@
-.footer{
-    width:100%;
-    padding: 3rem 0 ;
-    background-color: #F6F4EB; 
-    bottom:0;
-    margin-top: 10rem;
+/* Footer Styles */
+.footer {
+  width: 100%;
+  padding: 3rem 0;
+  color: #fff;
+  background-color: #000;
+  bottom: 0;
+  margin-top: 10rem;
 }
 
-.footer-container{
-    max-width: 1140px;
-    margin: auto ;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    grid-gap: 40px;
+.footer-container {
+  max-width: 1140px;
+  margin: auto;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 40px;
 }
 
-.left{
-    height:100%;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
+/* Left Column Styles */
+.left {
+  height: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 }
 
-.location{
-    display:block;
-    margin-bottom: 0.8 rem;
+.location {
+  display: block;
+  margin-bottom: 0.8rem;
 }
 
-.location p{
-    line-height: 30px;
-    margin-left : 2rem;
+.location p {
+  line-height: 30px;
+  margin-left: 2rem;
 }
 
-.right{
-    height:100%;
-    max-width: 100%;
-    display: flex;
-    flex-direction: column;
-    padding: 1rem;
+/* Right Column Styles */
+.right {
+  height: 100%;
+  max-width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
 }
 
-h4{
-    font-size: 1.2rem;
-    padding-bottom : 0.7rem;
+h4 {
+  font-size: 1.2rem;
+  padding-bottom: 0.7rem;
 }
 
-p{
-    font-size: 1.2rem;
+p {
+  font-size: 1.2rem;
 }
 
-.namer{
-    display: flex;
-    flex-direction: row;
-}
-.namer img{
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    border-style: solid;
-    transform: translate(20px,10px);
+/* Creator Info Styles */
+.namer {
+  display: flex;
+  flex-direction: row;
 }
 
-.repo{
-    text-decoration: none;
-    color:black;
+.namer img {
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  border: 2px solid #fff; /* Added border style */
+  margin-right: 10px; /* Adjusted margin */
 }
-.repo:hover{
-    color: #91C8E4;
-    text-decoration: none;
+
+.repo {
+  text-decoration: none;
+  color: black;
 }
+
+.repo:hover {
+  color: #91c8e4;
+  text-decoration: none;
+}
+
+/* Responsive Styles for Mobile */
 @media screen and (max-width: 640px) {
-    .footer-container{
-        grid-template-columns: 1fr;
-    }
+  .footer-container {
+    grid-template-columns: 1fr;
+  }
 }
