--- a/src/pages/Home/VerticalTimeline/VerticalTimeline.css
+++ b/src/pages/Home/VerticalTimeline/VerticalTimeline.css
@@ -1,47 +1,46 @@
-
 .timeline {
-    position: relative;
-    width: 100%;
-    max-width: 1400px;
-    margin: 0;
-    padding: 15px 0;
-    width: 100%;
-    height: 100%;
-    max-width: 100%;
-    max-height: 100vh;
-    background-size: cover;
-    background-position: center;
-    object-fit: cover;
-  }
-  
-  .timeline::after {
-    content: "";
-    position: absolute;
-    background: rgb(32, 38, 60);
-  }
-  
-  .container {
-    padding: 15px 30px;
-    position: relative;
-    background: inherit;
-    width: 50%;
-    padding-left: 0;
-    padding-right: 0;
-  }
-  
-  .container.left {
-    left: 0;
-  }
-  
-  .container.right {
-    left: 50%;
+  position: relative;
+  width: 100%;
+  max-width: 1400px;
+  margin: 0;
+  padding: 15px 0;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  max-height: 100vh;
+  background-size: cover;
+  background-position: center;
+  object-fit: cover;
+  margin-bottom: 1000px;
+}
 
-  }
-  
-  .container-left,
-  .container-right {
-    width: 50%;
-      padding-left: 0;
+.timeline::after {
+  content: "";
+  position: absolute;
+  background: rgb(32, 38, 60);
+}
+
+.container {
+  padding: 15px 30px;
+  position: relative;
+  background: inherit;
+  width: 50%;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.container.left {
+  left: 0;
+}
+
+.container.right {
+  left: 50%;
+}
+
+.container-left,
+.container-right {
+  width: 50%;
+  padding-left: 0;
   padding-right: 0;
 }
 
@@ -60,171 +59,171 @@
   left: -8px;
 }
 
-  .container.right::before {
-    left: 8px;
+.container.right::before {
+  left: 8px;
+}
+
+.container .date {
+  position: absolute;
+  display: inline-block;
+  top: calc(50% - 8px);
+  text-align: center;
+  font-size: 14px;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  z-index: 1;
+}
+
+.container.left .date {
+  right: -190px;
+}
+
+.container.right .date {
+  left: -175px;
+}
+
+.container .icon {
+  position: absolute;
+  display: inline-block;
+  width: 50px;
+  height: 40px;
+  padding: 9px 0;
+  top: calc(50% - 20px);
+  background: #ffffff;
+  border: 2px solid rgb(32, 38, 60);
+  border-radius: 40px;
+  text-align: center;
+  font-size: 12px;
+  color: rgb(32, 38, 60);
+  z-index: 1;
+}
+
+.container.left .icon {
+  right: 56px;
+}
+
+.container.right .icon {
+  left: 56px;
+}
+
+.container .content {
+  padding: 30px;
+  background: #749bc2;
+  position: relative;
+  border-radius: 0 300px 300px 0;
+}
+
+.container.right .content {
+  padding: 30px 30px 30px 90px;
+  border-radius: 500px 0 0 500px;
+}
+
+.container .content h2 {
+  margin: 0 0 10px 0;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.container .content ul {
+  margin-right: 50px;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    padding: 15px;
   }
-  
+
+  .container.left {
+    left: 0;
+  }
+
+  .container.right {
+    left: 0;
+  }
+
+  .container-left,
+  .container-right {
+    width: 100%;
+  }
+
+  .container-right {
+    margin-left: 0;
+  }
+
+  .container::after {
+    display: none;
+  }
+
+  .container::before {
+    display: none;
+  }
+
   .container .date {
-    position: absolute;
-    display: inline-block;
-    top: calc(50% - 8px);
+    position: static;
+    display: block;
     text-align: center;
-    font-size: 14px;
-    font-weight: bold;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    z-index: 1;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    right: 0;
+    left: 0;
   }
-  
+
   .container.left .date {
-    right: -190px;
+    margin-right: auto;
   }
-  
+
   .container.right .date {
-    left: -175px;
+    margin-left: auto;
   }
-  
+
   .container .icon {
-    position: absolute;
-    display: inline-block;
-    width: 50px;
-    height: 40px;
-    padding: 9px 0;
-    top: calc(50% - 20px);
-    background: #ffffff;
-    border: 2px solid rgb(32, 38, 60);
-    border-radius: 40px;
-    text-align: center;
-    font-size: 12px;
-    color: rgb(32, 38, 60);
-    z-index: 1;
+    position: static;
+    display: block;
+    width: auto;
+    height: auto;
+    padding: 5px 10px;
+    margin: 0 auto;
+    margin-bottom: 10px;
   }
-  
+
   .container.left .icon {
-    right: 56px;
+    margin-right: auto;
+    width: 30px;
   }
-  
+
   .container.right .icon {
-    left: 56px;
+    margin-left: auto;
+    width: 30px;
   }
-  
+
   .container .content {
-    padding: 30px;
-    background: #749BC2;
-    position: relative;
-    border-radius: 0 300px 300px 0;
+    padding: 15px;
+    border-radius: 0;
   }
-  
+
   .container.right .content {
-    padding: 30px 30px 30px 90px;
-    border-radius: 500px 0 0 500px;
+    padding: 15px;
+    border-radius: 0;
   }
-  
+
   .container .content h2 {
-    margin: 0 0 10px 0;
-    font-size: 18px;
-    font-weight: normal;
-  }
-  
-  .container .content ul {
-    margin-right: 50px;
     font-size: 16px;
-    line-height: 22px;
   }
-  
-  @media (max-width: 768px) {
-    .container {
-      width: 100%;
-      padding: 15px;
-    }
-  
-    .container.left {
-      left: 0;
-    }
-  
-    .container.right {
-      left: 0;
-    }
-  
-    .container-left,
-    .container-right {
-      width: 100%;
-    }
-  
-    .container-right {
-      margin-left: 0;
-    }
-  
-    .container::after {
-      display: none;
-    }
-  
-    .container::before {
-      display: none;
-    }
-  
-    .container .date {
-      position: static;
-      display: block;
-      text-align: center;
-      margin-bottom: 10px;
-      margin-top: 10px;
-      right: 0;
-      left: 0;
-    }
-  
-    .container.left .date {
-      margin-right: auto;
-    }
-  
-    .container.right .date {
-      margin-left: auto;
-    }
-  
-    .container .icon {
-      position: static;
-      display: block;
-      width: auto;
-      height: auto;
-      padding: 5px 10px;
-      margin: 0 auto;
-      margin-bottom: 10px;
-    }
-  
-    .container.left .icon {
-      margin-right: auto;
-      width: 30px;
-    }
-  
-    .container.right .icon {
-      margin-left: auto;
-      width: 30px;
-    }
-  
-    .container .content {
-      padding: 15px;
-      border-radius: 0;
-    }
-  
-    .container.right .content {
-      padding: 15px;
-      border-radius: 0;
-    }
-  
-    .container .content h2 {
-      font-size: 16px;
-    }
-  
-    .container .content ul {
-      margin-right: 0;
-      font-size: 14px;
-      line-height: 18px;
-    }
-  
-    .timeline::after {
-      display: none;
-    }
+
+  .container .content ul {
+    margin-right: 0;
+    font-size: 14px;
+    line-height: 18px;
   }
+
+  .timeline::after {
+    display: none;
+  }
+}
 
 /* Define the animation for all containers to appear from the bottom */
 @keyframes appear-from-bottom {
@@ -254,5 +253,5 @@
 }
 
 p > span {
-  color: #fff;
+  color: white;
 }
